<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_computador_details"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/computer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_det_nome_computador"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome do Computador"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/iv_computador_details"
        app:layout_constraintStart_toStartOf="@id/iv_computador_details"
        app:layout_constraintTop_toBottomOf="@id/iv_computador_details" />

    <TextView
        android:id="@+id/tv_det_ip_computador"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_det_ip_computador"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/iv_computador_details"
        app:layout_constraintStart_toStartOf="@id/iv_computador_details"
        app:layout_constraintTop_toBottomOf="@id/tv_det_nome_computador" />

    <TextView
        android:id="@+id/tv_det_versao_econect"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_det_versao_econect"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/iv_computador_details"
        app:layout_constraintStart_toStartOf="@id/iv_computador_details"
        app:layout_constraintTop_toBottomOf="@id/tv_det_ip_computador" />

    <Button
        android:id="@+id/btn_atualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_det_atualizar_dados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>